--- a/trunk/kuokuo/war/search.html
+++ b/trunk/kuokuo/war/search.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link type="text/css" rel="stylesheet" href="style.css">
+    <link type="text/css" rel="stylesheet" href="themes/bird/style.css">
     <title>Kuokuo - 看看</title>
   </head>
   <body>
